--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                         <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3">Read More</a>
                     </div>
                     <div class="col-lg-6">
-                        <video class="img-fluid wow fadeInUp" data-wow-delay="0.5s" src="img/about.mp4">
+                        <video autoplay loop muted class="img-fluid wow fadeInUp" data-wow-delay="0.5s">
+				<source src="img/about.mp4">
+			</video>
                     </div>
                 </div>
             </div>
