--- a/index.html
+++ b/index.html
@@ -34,6 +34,41 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
+	 <script>
+      window.botpressWebChat.init({
+          "composerPlaceholder": "Chat with Traffic-Cop",
+          "botConversationDescription": "Leading the Way in Next-Generation Traffic Solutions.",
+          "botId": "780b25b1-9eba-4921-9680-7cff4fb36af1",
+          "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+          "messagingUrl": "https://messaging.botpress.cloud",
+          "clientId": "780b25b1-9eba-4921-9680-7cff4fb36af1",
+          "webhookId": "d2f4450c-c150-470e-83a1-6782f6b5cee2",
+          "lazySocket": true,
+          "themeName": "prism",
+          "botName": "Traffic-Cop",
+          "avatarUrl": "https://tse4.mm.bing.net/th?id=OIP.Xnxn1CS0jF_hnb78KUTSWAHaEc&pid=Api&P=0&h=180",
+          "phoneNumber": "+917588322212",
+          "emailAddress": "traffickarnataka@gmail.com",
+          "website": "https://piyush-joshi1.github.io/Traffic_Optimization/",
+          "stylesheet": "https://webchat-styler-css.botpress.app/prod/77a1e960-3e00-44a1-a676-7cc38c4b581c/v9644/style.css",
+          "frontendVersion": "v1",
+          "enableConversationDeletion": true,
+          "theme": "prism",
+          "themeColor": "#0090ff",
+          "hideWidget": true,
+          "disableAnimations": true,
+          "closeOnEscape": false,
+          "showConversationsButton": false,
+          "enableTranscriptDownload": false,
+          "className": "webchatIframe",
+          "containerWidth": "100%25",
+          "layoutWidth": "100%25",
+          "showCloseButton": true
+      });
+    window.botpressWebChat.onEvent(function () { window.botpressWebChat.sendEvent({ type: 'show' }) }, ['LIFECYCLE.LOADED']);
+    </script>
+    <script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/780b25b1-9eba-4921-9680-7cff4fb36af1/webchat/v2/config.js"></script>
     <div class="container-xxl bg-white p-0">
       
        
