--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         <h1 class="mb-4" style="font-size: 26px; ">Traffic Flow Optimization</h1><img src="./img/Untitled design (2).png" width="100" height="100 ">
                         
                         <p class="montserrat" style="font-family: 'Montserrat';font-size: 17px;">Our platform is designed to streamline traffic management and enhance the commuting experience for all. With advanced technologies like real-time data analysis and adaptive algorithms, we optimize signal timings to minimize congestion and reduce travel times. Our goal is to create a smarter, more efficient road network that benefits both drivers and communities alike.</p>
-                        <img src="./img/Untitled design (1).png" width="100" height="100 " style="margin-left: 530px;">
+                        <img src="./img/Untitled design (4) (1).mp4" width="100" height="100 " style="margin-left: 530px;">
                     </div>
                     <div class="col-lg-6">
                         <video autoplay loop muted class="img-fluid wow fadeInUp" data-wow-delay="0.5s">
