--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                           <a href="#benefits" class="nav-item nav-link">Benifits</a>                    <a href="#contact" class="nav-item nav-link">Contact</a>
     
                     </div>
-                    <a href="/mobile-app-html-template/nlogin/dist/index.html"><button type="button" class="btn btn-outline-warning" style="color:rgb(25, 29, 22)">Login</button></a>
+                    <a href="./nlogin/dist/login.html"><button type="button" class="btn btn-outline-warning" style="color:rgb(25, 29, 22)">Login</button></a>
     
                 </div>
             </nav>
