--- a/afterlogin.html
+++ b/afterlogin.html
@@ -426,7 +426,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Live Object Detection</h5>
                         <p class="card-text">Experience live object detection through our camera-based system, utilizing cutting-edge computer vision and machine learning technologies. Enhance security, monitor traffic, and enable real-time decision-making with accurate object recognition. </p>
-                        <a href="https://webcam-5.onrender.com" class="btn btn-primary">Let's Do</a>
+                        <a href="https://kspdatathon.streamlit.app/" class="btn btn-primary">Let's Do</a>
 
                           
                     </div>
