--- a/afterlogin.html
+++ b/afterlogin.html
@@ -167,7 +167,7 @@
                                                 </a>
                                                 <ul class="dropdown-menu" style="background-color:rgb(144, 196, 231);">
                                                   <li><a class="dropdown-item" href="#" >Edit Profile</a></li>
-                                                  <li><a class="dropdown-item" href="#" >Logout</a></li>
+                                                  <li><a href="./wecam-main/index.html" class="dropdown-item" href="#" >Logout</a></li>
                                                 </ul>
                                               </li>
     
