--- a/afterlogin.html
+++ b/afterlogin.html
@@ -167,7 +167,7 @@
                                                 </a>
                                                 <ul class="dropdown-menu" style="background-color:rgb(144, 196, 231);">
                                                   <li><a class="dropdown-item" href="#" >Edit Profile</a></li>
-                                                  <li><a href="./wecam-main/index.html" class="dropdown-item" href="#" >Logout</a></li>
+                                                  <li><a href="/index.html" class="dropdown-item" href="#" >Logout</a></li>
                                                 </ul>
                                               </li>
     
@@ -374,7 +374,7 @@
                             </div>
                             <h5 class="mb-3 hello" class="hello">Signal Timing Optimization</h5>
                             <p class="m-0 hello" class="montserrat"style="font-family: 'Montserrat';" > Signal time optimization not only minimizes wait times and reduces congestion but also enhances environmental sustainability by reducing vehicle emissions. Additionally, by prioritizing pedestrian and cyclist safety, it fosters a more inclusive and accessible urban environment.</p>
-                            <button type="button" class="btn btn-outline-warning" style="margin-top: 10px; color:black" > Let's Run</button>
+                            <a href="https://kspdatathon.streamlit.app/"> <button type="button" class="btn btn-outline-warning" style="margin-top: 10px; color:black" > Let's Run</button> </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -383,7 +383,7 @@
                                 <i style='font-size:24px;color:aliceblue' class='fas'>&#xf108;</i>                            </div>
                             <h5 class="mb-3 hello">Traffic Performance Monitoring</h5>
                             <p class="m-0 hello">Providing real-time dashboards and reports to traffic authorities for tracking key metrics such as average wait times, vehicle throughput, and intersection capacity utilization, enabling informed decision-making and assessment of traffic management strategies.</p>
-                            <button type="button" class="btn btn-outline-warning" style="margin-top: 10px;color:black">Let's Monitor</button>
+                            <a href="https://kspdatathon.streamlit.app/"><button type="button" class="btn btn-outline-warning" style="margin-top: 10px;color:black">Let's Monitor</button> </a>
 
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                                 <i style='font-size:24px ; color:aliceblue' class='fas'>&#xf1b9;</i>                            </div>
                             <h5 class="mb-3 hello">Bottleneck Situation Prediction</h5>
                             <p class="m-0 hello">Bottleneck situation detection involves identifying areas in a traffic network where congestion occurs, leading to delays. By analyzing real-time traffic data, these bottlenecks can be pinpointed and addressed promptly to improve traffic flow and reduce delays.</p>
-                            <button type="button" class="btn btn-outline-warning" style="margin-top: 10px;color:black">Let's Predict</button>
+                           <a href="https://kspdatathon.streamlit.app/"> <button type="button" class="btn btn-outline-warning" style="margin-top: 10px;color:black">Let's Predict</button> </a>
 
                         </div>
                     </div>
