--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse" style="margin-right:50px">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="#home" class="nav-item nav-link active">Home</a>
-                        <a href="/about.html" class="nav-item nav-link">About</a>
+                        <a href="/about1.html" class="nav-item nav-link">About</a>
                         
                         <!-- <a href="#pricing" class="nav-item nav-link">Pricing</a> -->
     
