--- a/about1.html
+++ b/about1.html
@@ -77,7 +77,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0" id="home">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="./afterlogin.html" class="navbar-brand p-0">
+                <a href="./index.html" class="navbar-brand p-0">
                     <h1 class="m-0">Karnataka State Police</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
