--- a/about1.html
+++ b/about1.html
@@ -78,7 +78,7 @@
         <div class="container-xxl position-relative p-0" id="home">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="./index.html" class="navbar-brand p-0">
-                    <h1 class="m-0">Karnataka State Police</h1>
+                    <h1 class="m-0" style="color:black">Karnataka State Police</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
