--- a/afterlogin.html
+++ b/afterlogin.html
@@ -154,9 +154,9 @@
                               Features
                             </a>
                             <ul class="dropdown-menu" style="background-color:rgb(144, 196, 231);">
-                              <li><a class="dropdown-item" href="#" >Signal Time Optimization</a></li>
-                              <li><a class="dropdown-item" href="#" >Object Detection</a></li>
-                              <li><a class="dropdown-item" href="#" > Simulation</a></li>
+                              <li><a class="dropdown-item" href="https://kspdatathon.streamlit.app/" >Signal Time Optimization</a></li>
+                              <li><a class="dropdown-item" href="https://kspdatathon.streamlit.app/" >Object Detection</a></li>
+                              <li><a class="dropdown-item" href="https://nothingve-hekqxcpkt984df9w6ivfse.streamlit.app/" > Simulation</a></li>
                             </ul>
                           </li>
                           <a href="#benefits" class="nav-item nav-link">Benifits</a> 
@@ -227,9 +227,9 @@
                               Features
                             </a>
                             <ul class="dropdown-menu" style="background-color:rgb(144, 196, 231);">
-                              <li><a class="dropdown-item" href="#" >Signal Time Optimization</a></li>
-                              <li><a class="dropdown-item" href="#" >Object Detection</a></li>
-                              <li><a class="dropdown-item" href="#" > Simulation</a></li>
+                              <li><a class="dropdown-item" href="https://kspdatathon.streamlit.app/" >Signal Time Optimization</a></li>
+                              <li><a class="dropdown-item" href="https://kspdatathon.streamlit.app/" >Object Detection</a></li>
+                              <li><a class="dropdown-item" href="https://nothingve-hekqxcpkt984df9w6ivfse.streamlit.app/" > Simulation</a></li>
                             </ul>
                           </li>
                           <a href="#benefits" class="nav-item nav-link">Benifits</a>                    <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -248,7 +248,7 @@
          <p class="text-white pb-3 animated slideInDown" style="color: aliceblue;margin-left:70px" >
 
              Our platform utilizes CCTV cameras to track vehicles in real-time, employing sophisticated algorithms for accurate vehicle detection and monitoring. This enables efficient traffic management and congestion reduction through dynamic signal adjustments.</p>
-                            <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft"  style="color: aliceblue;margin-left:70px">Run Optimization</a>
+                            <a href="https://nothingve-hekqxcpkt984df9w6ivfse.streamlit.app/" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft"  style="color: aliceblue;margin-left:70px">Run Optimization</a>
                         </div>
                         <div class="col-lg-4 d-flex justify-content-center justify-content-lg-19 wow fadeInUp" data-wow-delay="0.2s" style="margin-bottom: 20000px;" >
                             <img class="img-fluid" src="./img/Vehicle_Detected.png" alt="" >
@@ -296,7 +296,7 @@
                             <ul class="dropdown-menu" style="background-color:rgb(144, 196, 231);">
                               <li><a class="dropdown-item" href="#" >Signal Time Optimization</a></li>
                               <li><a class="dropdown-item" href="#" >Object Detection</a></li>
-                              <li><a class="dropdown-item" href="#" > Simulation</a></li>
+                              <li><a class="dropdown-item" href="https://nothingve-hekqxcpkt984df9w6ivfse.streamlit.app/" > Simulation</a></li>
                             </ul>
                           </li>
                           <a href="#benefits" class="nav-item nav-link">Benifits</a>                    <a href="#contact" class="nav-item nav-link">Contact</a>
