--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
-
+<script> alert("Login First To Explore More ")</script>
   
     <div class="container-xxl bg-white p-0">
       
